
gbsplay HISTORY


2020/xx/xx  -  unreleased
~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- gbsplay:
  - fix off-by-one error in gbhw_io_peek (fixes verbose WAVE display)
  - fix Windows builds on MSYS2, MINGW32 and MINGW64
  - fix buffer handling in dsound plugout (fixes choppy and too fast playback)
  - fix typos in manpage

- build process:
  - don't run depend.sh before config.mk is included
  - only enable i18n if it really works
  - only build with -fstack-* protections if they really work

Removals:

- gbsplay:
  - remove unmaintained splint annotations
  - remove regparm optimizations
  - remove usleep() usage, use nanosleep() instead (it's more POSIX)

Enhancements:

- gbsplay:
  - add SDL2 plugout
  - transparent decompression of gzip-compressed files
  - basic VGM file support
  - remove unneeded dsound3d dependency from dsound plugin
  - add WAV writer plugout

- xgbsplay:
  - add simple X11 frontend; use configure --with-xgbsplay

- build process:
  - depend on bash 3.x for configure script
  - add automated build pipelines for Linux, macOS and
    Windows (MSYS2, MINGW32 and MINGW64; no CygWin yet)
    - test for successful builds
    - test plugout configuration
    - test some configure options
    - test install and uninstall targets
    - calculate code coverage
  - use command -v instead of homegrown which replacement

Documentation:

- convert README to Markdown format
- add shiny build status badges to README.md


2020/06/26  -  0.0.94
~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- gbsplay:
  - cpu emulation fixes:
    - RLCA/RLA/RRCA/RRA did not set ZF
    - fix botched SBC zero flag handling
    - fix slight bug in ADC/SBC
    - fix INC/DEC SP, CP A and half-carry flag in DEC
    - fix PUSH/POP AF
    - fix cycle timing for conditional branches
    - fix cycle timing for LD HLSP/LD SPHL and 16bit ALU ops
    - halt with global interrupt flag disabled can still be interrupted
  - fix error on midi plugout where a write to the file could occur