@@ -11,6 +11,7 @@
 #define _GBHW_H_
 
 #include <inttypes.h>
+
 #include "common.h"
 #include "libgbs.h"
 #include "gbcpu.h"
