@@ -6,10 +6,10 @@
  * Licensed under GNU GPL v1 or, at your option, any later version.
  */
 
+#include <inttypes.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
-#include <inttypes.h>
 #include <math.h>
 
 #include "impulsegen.h"
